Quick CSS fix for disclaimer header on IE

--- a/themes/murray-tweet-index/assets/css/main.css
+++ b/themes/murray-tweet-index/assets/css/main.css
@@ -3560,13 +3560,7 @@ blockquote {
   width: 100%;
   height: 75px;
   top: 0;
-  left: 0;
-  *zoom: 1; }
-  .disclaimer-header:before, .disclaimer-header:after {
-    content: '';
-    display: table; }
-  .disclaimer-header:after {
-    clear: both; }
+  left: 0; }
 
 .disclaimer-title {
   margin-top: 23px;
@@ -3622,7 +3616,8 @@ blockquote {
 
 .disclaimer-content {
   overflow-y: scroll;
-  max-height: calc(80vh - 180px); }
+  max-height: calc(80vh - 180px);
+  padding-right: 20px; }
   @media (max-width: 700px) {
     .disclaimer-content {
       max-height: calc(100vh - 180px); } }
