--- a/themes/murray-tweet-index/assets/scss/modules/_disclaimer.scss
+++ b/themes/murray-tweet-index/assets/scss/modules/_disclaimer.scss
@@ -36,7 +36,6 @@
 	height: 75px;
 	top: 0;
 	left: 0;
-	@include cf();
 }
 
 .disclaimer-title {
@@ -96,6 +95,7 @@
 .disclaimer-content {
 	overflow-y: scroll;
 	max-height: calc(80vh - 180px);
+	padding-right: 20px;
 	@include breakpoint($break-700) {
 		max-height: calc(100vh - 180px);
 	}
